PAY-8542: Report optimisations