@@ -3,15 +3,11 @@ package uk.gov.hmcts.reform.bulkscanning.service;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
-import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.context.WebApplicationContext;
 import uk.gov.hmcts.reform.bulkscanning.model.dto.ReportData;
 import uk.gov.hmcts.reform.bulkscanning.model.entity.EnvelopePayment;
 import uk.gov.hmcts.reform.bulkscanning.model.entity.PaymentMetadata;
@@ -24,10 +20,15 @@ import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+import java.util.Locale;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.bulkscanning.model.enums.EnvelopeSource.Bulk_Scan;
 
@@ -36,18 +37,8 @@ import static uk.gov.hmcts.reform.bulkscanning.model.enums.EnvelopeSource.Bulk_S
 @ActiveProfiles({"local", "test"})
 public class ReportServiceTest {
 
-    @Autowired
-    private WebApplicationContext webApplicationContext;
-
     @MockBean
     PaymentRepository paymentRepository;
-
-    @MockBean
-    private ClientRegistrationRepository clientRegistrationRepository;
-
-    @MockBean
-    private JwtDecoder jwtDecoder;
-
 
     @MockBean
     PaymentMetadataRepository paymentMetadataRepository;
@@ -67,24 +58,25 @@ public class ReportServiceTest {
                                             .dateCreated(LocalDateTime.of(2021,1,15,10,10))
                                             .build();
         envelopePayments.add(envelopePayment);
-        when(paymentRepository.findByPaymentStatusAndDateCreatedBetween(any(String.class), any(LocalDateTime.class), any(LocalDateTime.class
-        ))).thenReturn(Optional.of(envelopePayments));
+        when(paymentRepository.findForReportByPaymentStatusAndDateCreatedBetween(any(String.class), any(LocalDateTime.class), any(LocalDateTime.class)))
+            .thenReturn(Optional.of(envelopePayments));
 
 
         PaymentMetadata paymentMetadata = PaymentMetadata.paymentMetadataWith()
-                                                .dateBanked(LocalDateTime.now())
-                                                .bgcReference("bgc-reference")
-                                                .paymentMethod("payment-method")
-                                                .amount(BigDecimal.valueOf(100.00))
-                                                .build();
-        when(paymentMetadataRepository.findByDcnReference(any(String.class))).thenReturn(Optional.ofNullable(paymentMetadata));
+                                                .dcnReference("dcnReference")
+                                                 .dateBanked(LocalDateTime.now())
+                                                 .bgcReference("bgc-reference")
+                                                 .paymentMethod("payment-method")
+                                                 .amount(BigDecimal.valueOf(100.00))
+                                                 .build();
+        when(paymentMetadataRepository.findAllByDcnReferenceIn(anyCollection())).thenReturn(List.of(paymentMetadata));
         String startString = "January 10, 2021";
         String endString = "January 18, 2021";
         DateFormat format = new SimpleDateFormat("MMMM d, yyyy", Locale.ENGLISH);
         Date startDate = format.parse(startString);
         Date endDate = format.parse(endString);
         List<ReportData> reportList = reportService.retrieveByReportType(startDate, endDate, ReportType.UNPROCESSED);
-        assertThat(reportList.get(0).getAmount().toString()).isEqualTo("100.0");
+        assertThat(reportList.getFirst().getAmount().toString()).isEqualTo("100.0");
     }
 
     @Test
@@ -96,22 +88,23 @@ public class ReportServiceTest {
             .dateCreated(LocalDateTime.of(2021,1,15,10,10))
             .build();
         envelopePayments.add(envelopePayment);
-        when(paymentRepository.findByPaymentStatusAndDateCreatedBetween(any(String.class), any(LocalDateTime.class), any(LocalDateTime.class
-        ))).thenReturn(Optional.of(envelopePayments));
+        when(paymentRepository.findForReportByPaymentStatusAndDateCreatedBetween(any(String.class), any(LocalDateTime.class), any(LocalDateTime.class)))
+            .thenReturn(Optional.of(envelopePayments));
         PaymentMetadata paymentMetadata = PaymentMetadata.paymentMetadataWith()
-            .dateBanked(LocalDateTime.now())
-            .bgcReference("bgc-reference")
-            .paymentMethod("payment-method")
-            .amount(BigDecimal.valueOf(100.00))
-            .build();
-        when(paymentMetadataRepository.findByDcnReference(any(String.class))).thenReturn(Optional.ofNullable(paymentMetadata));
+            .dcnReference("dcnReference")
+             .dateBanked(LocalDateTime.now())
+             .bgcReference("bgc-reference")
+             .paymentMethod("payment-method")
+             .amount(BigDecimal.valueOf(100.00))
+             .build();
+        when(paymentMetadataRepository.findAllByDcnReferenceIn(anyCollection())).thenReturn(List.of(paymentMetadata));
         String startString = "January 10, 2021";
         String endString = "January 18, 2021";
         DateFormat format = new SimpleDateFormat("MMMM d, yyyy", Locale.ENGLISH);
         Date startDate = format.parse(startString);
         Date endDate = format.parse(endString);
         List<ReportData> reportList = reportService.retrieveByReportType(startDate, endDate, ReportType.DATA_LOSS);
-        assertThat(reportList.get(0).getAmount().toString()).isEqualTo("100.0");
+        assertThat(reportList.getFirst().getAmount().toString()).isEqualTo("100.0");
     }
 
 }
